--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -18,7 +18,8 @@ $violet: #{'hsl(273, 75%, 66%)'};
 $white: #{'hsl(0, 0%, 100%)'};
 
 // Color Usage
-$color-bg-main: $purple-rain;
+$color-bg-primary: $purple-rain;
+$color-bg-secondary: $white;
 $color-text-primary: $dark-gray;
 $color-text-active: $dark-blue;
 
