--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -24,8 +24,9 @@ p {
 }
 
 body {
-  background: $color-bg-main;
+  background: $color-bg-primary;
   font-family: $font-family--primary;
+  margin-top: 2.5rem;
 }
 
 h1 {
