--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -13,9 +13,9 @@
 }
 
 .container {
-  background-color: $white;
+  background-color: $color-bg-secondary;
   box-shadow: 0px 50px 50px -20px rgba(53, 18, 122, 0.497159);
-  border-radius: 23px;
+  border-radius: 1.5rem;
   margin: auto;
   min-height: 33.4375rem;
   padding-inline: 1.5rem;
