--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -30,5 +30,12 @@ body {
 }
 
 h1 {
+  @include text($headingL, $font-weight--bold, $color-text-primary);
+  line-height: $line__heading;
   text-align: center;
+}
+
+p {
+  @include text($body__default, $font-weight--regular, $color-text-tertiary);
+  line-height: $line__body;
 }
