--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -17,11 +17,20 @@
   box-shadow: 0px 50px 50px -20px rgba(53, 18, 122, 0.497159);
   border-radius: 1.5rem;
   margin: auto;
-  min-height: 33.4375rem;
   padding-inline: 1.5rem;
+
+  @media #{$brkpoint-md} {
+    max-height: 48rem;
+    width: 57.5rem;
+  }
 }
 
 .img-container {
   background-position: top;
   padding: 2.5rem 2.8125rem 5rem 2.8125rem;
+
+  @media #{$brkpoint-md} {
+    background-position: left;
+    padding: 0;
+  }
 }
