--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -6,54 +6,115 @@
 @use '../utilities/mixins' as *;
 
 main {
+  padding-bottom: 3rem;
   position: relative;
 }
 
 .faq__image,
-.faq__image-shadow {
+.faq__image-shadow,
+.faq__image-box {
   background-repeat: no-repeat;
   position: absolute;
   transform: translate(-50%, -50%);
   width: 15rem;
+
+  @media #{$brkpoint-md} {
+    width: 12.5rem;
+  }
 }
 
 .faq__image {
-  background-image: url('images/illustration-woman-online-mobile.svg');
-  height: 11.25rem;
+  height: 11.5rem;
   left: 50%;
   top: -1rem;
   z-index: 2;
+
+  @media #{$brkpoint-md} {
+    height: 22.5rem;
+    left: 0;
+    top: 50%;
+  }
 }
 
 .faq__image-shadow {
-  background-image: url('images/bg-pattern-mobile.svg');
   left: 50%;
   top: 3rem;
   height: 6.6875rem;
   z-index: 1;
+
+  @media #{$brkpoint-md} {
+    height: auto;
+    left: -55%;
+    bottom: -22rem;
+  }
+}
+
+.faq__image-box {
+  display: none;
+
+  @media #{$brkpoint-md} {
+    display: block;
+    left: 0;
+    top: 50%;
+    bottom: 8rem;
+    z-index: 3;
+  }
 }
 
 .accordion h2 {
-  padding-bottom: 1.25rem;
-  min-width: 14.6875rem;
+  border-bottom: 1px solid $color-divider;
   display: grid;
   grid-template-columns: 1fr;
+  min-width: 14.6875rem;
+  padding-bottom: 1.125rem;
+  padding-top: 1.188rem;
+}
+
+.accordion h2.active {
+  border-bottom: none;
 }
 
 .accordion__trigger {
   background-color: $color-bg-secondary;
-  font-family: $font-family--primary;
   border: none;
+  cursor: pointer;
   display: grid;
+  font-family: $font-family--primary;
   grid-template-columns: 1fr 1rem;
   gap: 1rem;
   justify-content: space-between;
+  padding: 0;
+}
+
+.accordion__trigger:focus {
+  outline: 4px solid transparent;
 }
 
 .accordion__heading {
+  @include text($headingS, $font-weight--regular, $color-text-secondary);
+  line-height: $line__heading;
   text-align: left;
+
+  &:hover{
+    color: $color-text-hover;
+  }
 }
 
 .accordion__icon {
   margin-left: auto;
+}
+
+.accordion__content {
+  border-bottom: 1px solid $color-divider;
+  padding-right: 2rem;
+  min-width: 14.6875rem;
+  padding-bottom: 1rem;
+}
+
+.accordion__trigger[aria-expanded="true"] .accordion__heading {
+  @include text($headingS, $font-weight--bold, $color-text-active);
+}
+
+.accordion__trigger[aria-expanded="true"] .accordion__icon {
+  transform: rotate(-180deg);
 }
