--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -32,7 +32,12 @@ body {
 h1 {
   @include text($headingL, $font-weight--bold, $color-text-primary);
   line-height: $line__heading;
+  padding-bottom: 1.25rem;
   text-align: center;
+
+  @media #{$brkpoint-md} {
+    text-align: left;
+  }
 }
 
 p {
