Accordion headings open and close correctly.

--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -8,7 +8,7 @@
 main {
   position: relative;
   max-width: 62.5rem;
-  margin: 9rem auto 2rem;
+  margin-top: 9rem;
 
   @media #{$brkpoint-md}{
     margin: auto;
@@ -63,10 +63,12 @@ main {
     left: -0.5rem;
     top: 58%;
     z-index: 3;
+    height: auto;
   }
 }
 
 .accordion {
+  height: 100%;
   padding: 0 1.5rem 3rem 1.5rem;
 
   @media #{$brkpoint-md} {
@@ -85,11 +87,11 @@ main {
   padding-top: 1.25rem;
 }
 
-.accordion h2.active {
+.accordion h2.open {
   border-bottom: none;
 }
 
-.accordion__trigger {
+.accordion__button {
   background-color: $color-bg-secondary;
   border: none;
   cursor: pointer;
@@ -101,7 +103,7 @@ main {
   padding: 0;
 }
 
-.accordion__trigger:focus {
+h2.accordion__button:focus {
   outline: 4px solid transparent;
 }
 
@@ -119,17 +121,22 @@ main {
   margin-left: auto;
 }
 
-.accordion__content {
+.accordion__content.open-active {
   border-bottom: 1px solid $color-divider;
   padding-right: 2rem;
   min-width: 14.6875rem;
   padding-bottom: 1rem;
 }
 
-.accordion__trigger[aria-expanded="true"] .accordion__heading {
+.accordion__content[aria-hidden="false"] {
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
+.accordion__button[aria-expanded="true"] .accordion__heading {
   @include text($headingS, $font-weight--bold, $color-text-active);
 }
 
-.accordion__trigger[aria-expanded="true"] .accordion__icon {
+.accordion__button[aria-expanded="true"] .accordion__icon {
   transform: rotate(-180deg);
 }
