--- a/styles.css
+++ b/styles.css
@@ -63,15 +63,13 @@ p {
 }
 @media (min-width: 62.5rem) {
   .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 32rem;
     overflow-x: hidden;
     overflow-y: hidden;
-    width: 57.5rem;
-    display: flex;
-    flex-direction: column nowrap;
-    justify-content: space-evenly;
-    padding-bottom: 5.25rem;
-    padding-top: 4.125rem;
     position: relative;
+    width: 57.5rem;
   }
 }
 
@@ -80,8 +78,6 @@ p {
 }
 @media (min-width: 62.5rem) {
   .img-container {
-    flex-basis: 50%;
-    align-self: flex-start;
     padding: 0;
   }
 }
@@ -161,8 +157,7 @@ main {
 }
 @media (min-width: 62.5rem) {
   .accordion {
-    flex-basis: 50%;
-    align-self: flex-end;
+    margin-top: 4.0625rem;
     padding: 0 6rem 0 1rem;
   }
 }
@@ -216,11 +211,7 @@ h2.accordion__button:focus {
   padding-right: 2rem;
   min-width: 14.6875rem;
   padding-bottom: 1rem;
-}
-
-.accordion__content[aria-hidden=false] {
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
+  overflow: auto;
 }
 
 .accordion__button[aria-expanded=true] .accordion__heading {
@@ -230,7 +221,7 @@ h2.accordion__button:focus {
 }
 
 .accordion__button[aria-expanded=true] .accordion__icon {
-  transform: rotate(-180deg);
+  transform: rotate(180deg);
 }
 
 .attribution {
